--- a/fitness-buddy/package.json
+++ b/fitness-buddy/package.json
@@ -23,6 +23,7 @@
     "firebase": "^4.1.3",
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
-    "react-native": "^0.44.0"
+    "react-native": "^0.44.0",
+    "react-native-fontawesome": "^5.7.0"
   }
 }
